--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -69,11 +69,11 @@ nav li {
 .footer {
     width: 100%;
     background-color: #efefef;
-    height: 158px;
     padding: 15px 55px;
     margin: 0 0;
     position: relative;
     bottom: 0;
+    text-align: center;
 }
 
 .footer a {
