--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -68,7 +68,6 @@ nav li {
 
 .footer {
     width: 100%;
-    background-color: #efefef;
     padding: 15px 55px;
     margin: 0 0;
     position: relative;
@@ -79,6 +78,7 @@ nav li {
 .footer a {
     color: black;
     text-decoration: none;
+    font-weight: bold;
 }
 
 .footer li {
