--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -80,6 +80,13 @@ nav li {
     text-decoration: none;
 }
 
+.footer a:hover {
+    color: white;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
 .footer li {
     display: inline;
 }
