--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -104,7 +104,8 @@ nav li {
     background-color: rgba(255, 255, 255, 0.9);
     margin: 0 auto;
     margin-top: 10%;
-    width: 55%;
+    width: 55vh;
+
 }
 
 #privacyContainer {
