--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -81,6 +81,7 @@ nav li {
     font-family: 'Jost', sans-serif;
     text-transform: lowercase;
     letter-spacing: 1px;
+    padding-right: 2px;
 }
 
 .footer a:hover {
